--- a/app/package.json
+++ b/app/package.json
@@ -11,15 +11,17 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "date-fns": "^4.1.0",
+    "joi": "^17.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
-    "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
