--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "joi": "^17.13.3",
     "react": "^18.3.1",
